tests/negative/neg_case_missing_others.safe
-- Test: neg_case_missing_others
-- Description: Every PR11.2 case statement requires a final others arm.
-- Expected: REJECT source_frontend_error

package Neg_Case_Missing_Others

   function Classify (Value : in Integer) returns Integer

      case Value
         when 1
            return 1;





